# FPZip.RS

./: .gitignore  Cargo.toml  README.md
.claude/: settings.local.json
.github/workflows/: ci.yml  publish.yml
fpzip/: Cargo.toml
fpzip-async/: Cargo.toml
fpzip-async/src/: lib.rs
fpzip-ffi/: Cargo.toml
fpzip-ffi/include/: fpzip.h
fpzip-ffi/src/: lib.rs
fpzip/benches/: compress.rs
fpzip/src/: compressor.rs  decoder.rs  encoder.rs  error.rs  header.rs  lib.rs
fpzip/src/codec/: mod.rs  range_decoder.rs  range_encoder.rs  rc_qs_model.rs
fpzip/src/core/: front.rs  mod.rs  pc_decoder.rs  pc_encoder.rs  pc_map.rs  simd.rs
fpzip/tests/: compression_ratio.rs  integration.rs  prng.rs
fpzip/tests/test_helpers/: mod.rs
