[package]
name = "fpzip-async"
version = "0.1.0"
edition = "2021"
rust-version = "1.63"
authors = ["Nick B. Nassiri"]
license = "MIT"
description = "Async wrappers for fpzip-rs floating-point compression"
repository = "https://github.com/nickna/FPZip.RS"
publish = false

[dependencies]
fpzip-rs = { path = "../fpzip" }
tokio = { version = "1", features = ["io-util", "rt"] }
