[package]
name = "fpzip-ffi"
version = "0.1.0"
edition = "2021"
rust-version = "1.63"
authors = ["Nick B. Nassiri"]
license = "MIT"
description = "C FFI bindings for fpzip-rs floating-point compression"
repository = "https://github.com/nickna/FPZip.RS"
publish = false

[lib]
crate-type = ["cdylib", "staticlib"]

[dependencies]
fpzip-rs = { path = "../fpzip" }
