[package]
name = "fpzip-rs"
version = "0.1.0"
edition = "2021"
rust-version = "1.63"
authors = ["Nick B. Nassiri"]
license = "MIT"
description = "Lossless and lossy floating-point compression for multi-dimensional arrays"
documentation = "https://docs.rs/fpzip-rs"
repository = "https://github.com/nickna/FPZip.RS"
readme = "../README.md"
keywords = ["compression", "fpzip", "floating-point", "scientific-computing", "lossless"]
categories = ["compression", "science", "algorithms"]

[features]
default = ["std"]
std = ["alloc", "thiserror/std"]
alloc = []
rayon = ["dep:rayon", "std"]
simd = ["std"]

[dependencies]
thiserror = { version = "2", default-features = false }
rayon = { version = "1", optional = true }

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }

[[bench]]
name = "compress"
harness = false
